--- a/ML model/data_preprocessing_crop_faces.ipynb
+++ b/ML model/data_preprocessing_crop_faces.ipynb
@@ -2469,6 +2469,35 @@
    ],
    "source": [
     "# Read image and convert it to rgb\n",
+    "for i in range(len(fpath)):\n",
+    "    try:\n",
+    "       \n",
+    "        img = cv2.imread(fpath[i]) #read image in bgr always\n",
+    "        img_rgb = cv2.cvtColor(img, cv2.COLOR_BGR2RGB) # convert bgr to rgb\n",
+    "        \n",
+    "        # Apply haar cascade classifier\n",
+    "        \n",
+    "        haar = cv2.CascadeClassifier('./model/haarcascade_frontalface_default.xml')\n",
+    "        gray = cv2.cvtColor(img_rgb,cv2.COLOR_BGR2GRAY)\n",
+    "        faces_list = haar.detectMultiScale(gray,1.5,5)\n",
+    "        for x,y,w,h in faces_list:\n",
+    "            # cv2.rectangle(img_rgb,(x,y),(x+w,y+h),(0,255,0),2)\n",
+    "            # crop face\n",
+    "            roi = img[y:y+h,x:x+w]\n",
+    "            cv2.imwrite(f'./crop_data/female/female_{i}.jpg',roi)\n",
+    "            print('Image Processed Succesfully')\n",
+    "    except:\n",
+    "        print('Not Processed')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca662115-8a1c-41ea-92b9-1b802ebc71b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read image and convert it to rgb\n",
     "for i in range(len(mpath)):\n",
     "    try:\n",
     "        img = cv2.imread(mpath[i]) #read image in bgr always\n",
